--- a/style.css
+++ b/style.css
@@ -2,32 +2,40 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #3c1645;
+    background-color: #f5e1f7;
 }
 
-header {
-    background-color: #77489f;
+.header {
+    background-color: #7d48a8;
     color: #fff;
     text-align: center;
-    padding: 1em;
+    padding: 2em 0;
 }
 
-section {
+.header-content {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.site-title {
+    font-size: 2.5em;
+}
+
+.tagline {
+    font-size: 1.2em;
+}
+
+.about-me, .projects, .skills, .contact, .education, .work {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
-h1, h2 {
-    color: #333;
-}
-
-p {
-    line-height: 1.6;
-    color: #666;
+h2 {
+    color: #7d48a8;
 }
 
 ul {
@@ -36,11 +44,11 @@ ul {
 }
 
 li {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 a {
-    color: #007bff;
+    color: #0077ff;
     text-decoration: none;
 }
 
@@ -48,12 +56,13 @@ a:hover {
     text-decoration: underline;
 }
 
-footer {
+.footer {
     text-align: center;
     padding: 1em;
-    background-color: #333;
+    background-color: #7d48a8;
     color: #fff;
     position: fixed;
     bottom: 0;
     width: 100%;
 }
+
